--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "login": { 
         "type": "Premium",
         "date": "Life",
-        "key": "v9qx",
+        "key": "v9qx"
         "token": ""
     },
     "bot": { 
